--- a/LessonsProject/app/build.gradle
+++ b/LessonsProject/app/build.gradle
@@ -20,16 +20,24 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        repositories {
+            jcenter()
+        }
     }
 }
 
 dependencies {
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation("com.github.terrakok:cicerone:6.3")
+
+    implementation "org.koin:koin-android:2.2.0"
+    implementation "org.koin:koin-android-scope:2.2.0"
+    implementation "org.koin:koin-android-viewmodel:2.2.0"
+    implementation "org.koin:koin-android-ext:2.2.0"
 }
