--- a/LessonsProject/app/src/main/AndroidManifest.xml
+++ b/LessonsProject/app/src/main/AndroidManifest.xml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.study.androidstudy">
 
     <application
-        android:allowBackup="true"
+        android:name=".App"
         android:icon="@mipmap/ic_launcher"
+        tools:ignore="GoogleAppIndexingWarning"
+        android:theme="@style/AppTheme"
+        android:allowBackup="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true">
 
-        <activity android:name=".main.MainActivity">
+        <activity android:name="com.study.androidstudy.screens.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".calculation.CalculationActivity"
-            android:parentActivityName=".main.MainActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustNothing" />
-
     </application>
-
 </manifest>
