--- a/LessonsProject/app/build.gradle
+++ b/LessonsProject/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation "org.koin:koin-android-scope:2.2.0"
     implementation "org.koin:koin-android-viewmodel:2.2.0"
     implementation "org.koin:koin-android-ext:2.2.0"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
