--- a/LessonsProject/app/build.gradle
+++ b/LessonsProject/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation "org.koin:koin-android-ext:2.2.0"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
 }
