--- a/LessonsProject/app/src/main/AndroidManifest.xml
+++ b/LessonsProject/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
 
-        <activity android:name="com.study.androidstudy.screens.main.MainActivity">
+        <activity android:name="com.study.androidstudy.screens.main.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
